js/js.translator/testData/incremental/invalidation/genericInlineFunctionsWithCrossModuleInliner/lib1/l1.3.kt
inline fun <T: Any?> foo(x: T) = 123
